--- a/SketchAssistant/SketchAssistantWPF/MainWindow.xaml
+++ b/SketchAssistant/SketchAssistantWPF/MainWindow.xaml
@@ -32,6 +32,7 @@
                     <MenuItem Header="New Canvas" Click="CanvasButton_Click"/>
                     <MenuItem Header="Undo" Click="UndoButton_Click"/>
                     <MenuItem Header="Redo" Click="RedoButton_Click"/>
+                    <MenuItem Header="Calibrate OptiTrack" Click="OpenOptiTrackCalibration_Click"/>
                 </MenuItem>
             </Menu>
         </ToolBar>
@@ -169,10 +170,10 @@
                     </Rectangle.Fill>
                 </Rectangle>
             </Button>
-            <Button x:Name="DrawWithOptiButton" ToolTip="Enter Drawing Mode (OptiTrack)" Click="DrawWithOptiButton_Click">
+            <ToggleButton x:Name="DrawWithOptiButton" ToolTip="Enter Drawing Mode (OptiTrack)" Click="DrawWithOptiButton_Click">
                 <Canvas  Name="svg62" Width="30" Height="30">
                     <Canvas.RenderTransform>
-                        <TranslateTransform X="0" Y="-277"/>
+                        <TranslateTransform X="4" Y="-270"/>
                     </Canvas.RenderTransform>
                     <Canvas.Resources/>
                     <!--Unknown tag: sodipodi:namedview-->
@@ -187,7 +188,7 @@
                         </Canvas>
                     </Canvas>
                 </Canvas>
-            </Button>
+            </ToggleButton>
         </ToolBar>
         <Canvas Name="LeftCanvas" Background="SlateGray" Grid.Column="2" Grid.Row="1" Height="auto" Grid.ColumnSpan="2"/>
         <Canvas Name="CanvasSeperator" Grid.Column="4" Grid.Row="1" Background="LightGray"/>
